# bits-n-bytes-ui

./: .gitignore  .gitmodules  80:65:99:49:EF:8E.json  README.md  app_controller.py  compile.sh  config.py  database.py  email_template.html  main.py  model.py  mqtt.py  nfc.py  poweroff.sh  requirements.txt  resources_rc.py  setup.py  shelf_manager.py
BnB/: Admin.qml  AdminScreen.ui.qml  BnB.qmlproject  BnB.qmlproject.qtds  CMakeLists.txt  Cart.qml  CartScreen.ui.qml  Main.qml  Name.qml  NameScreen.ui.qml  Reciept.qml  RecieptScreen.ui.qml  Tare.qml  TareScreen.ui.qml  Test.qml  Welcome.qml  WelcomeScreen.ui.qml
bnb/: app_controller.py  database.py  main.py  model.py  mqtt.py  nfc.py  old_shelf_manager.py  s3.py  shelf_manager.py
core/: __init__.py  data_classes.py  database.py  model.py
models/: __init__.py
resources/: resources.qrc  resources_rc.py
screens/: admin_screen.py  cart_screen.py  reciept_screen.py  tare_screen.py  ui_admin.py  ui_cart.py  ui_reciept.py  ui_tare.py  ui_welcome.py  welcome_screen.py
templates/: _footer.html  _header.html  _item_row.html  _total_row.html  order_confirmation.html
ui/: .gitignore  Admin.qml  CMakeLists.txt  Cart.qml  CartItemDelegate.qml  CloseDoors.qml  Countdown.qml  Main.qml  Name.qml  Notification.qml  Receipt.qml  Reciept.qml  ResponseInput.qml  Shelf.qml  Tare.qml  TareButton.qml  Welcome.qml  admin_screen.ui  cart_screen.ui  lv_conf.h  main.c  reciept_screen.ui  tare_screen.ui  welcome_screen.ui
ui/imports/Constants/: Constants.qml
ui/untitled/: .gitignore  form.ui  main.py  main.ui  ui_form.py
(+18 files in other folders)
